ENG-4535 Fixed several code smells